--- a/Faroosom/Faroosom.API/Faroosom.API.csproj
+++ b/Faroosom/Faroosom.API/Faroosom.API.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Faroosom.BLL\Faroosom.BLL.csproj" />
     <ProjectReference Include="..\Faroosom.DAL\Faroosom.DAL.csproj" />
   </ItemGroup>
 
