--- a/Faroosom/Faroosom.API/appsettings.json
+++ b/Faroosom/Faroosom.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Faroosomdb;Trusted_Connection=True;",
+  "ConnectionString": "Server=localhost;Database=Faroosomdb;Trusted_Connection=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
